[gd_scene load_steps=23 format=3 uid="uid://btkmineyue1gp"]

[ext_resource type="PackedScene" uid="uid://7govdidjgxm8" path="res://screens/activities/05/entities/speedway.tscn" id="1_62cbq"]
[ext_resource type="Script" path="res://screens/activities/05/tasks/race.gd" id="1_impug"]
[ext_resource type="PackedScene" uid="uid://cq0gn0vhu1c5" path="res://screens/activities/05/entities/car.tscn" id="2_wetop"]
[ext_resource type="Texture2D" uid="uid://b4ce2eg02ncgc" path="res://assets/images/flag.webp" id="3_ysl2e"]
[ext_resource type="PackedScene" uid="uid://jriwlk872m4b" path="res://components/confetti_effect.tscn" id="4_nub6g"]
[ext_resource type="PackedScene" uid="uid://bccjdn2ldpl3g" path="res://components/frame_counter.tscn" id="5_t7p62"]
[ext_resource type="FontFile" uid="uid://cogryc0bfmmla" path="res://assets/fonts/Poppins-SemiBold.ttf" id="6_0nrhg"]
[ext_resource type="Script" path="res://scripts/prediction_component.gd" id="6_lvfr2"]
[ext_resource type="PackedScene" uid="uid://ca36cfa3brykw" path="res://components/transition_component.tscn" id="7_tvmg0"]
[ext_resource type="AudioStream" uid="uid://bpp3f6i3p4oqu" path="res://assets/voices/05/mueve_el_auto.mp3" id="8_w5ht4"]
[ext_resource type="AudioStream" uid="uid://daorhtm2rpnty" path="res://assets/voices/05/pronuncia.mp3" id="9_hinqq"]
[ext_resource type="AudioStream" uid="uid://d2u46c2g2dxxd" path="res://assets/voices/phonemes/i.mp3" id="10_80bu8"]
[ext_resource type="AudioStream" uid="uid://dfri37kfwjk8x" path="res://assets/voices/05/mover_arriba.mp3" id="11_8bkos"]
[ext_resource type="AudioStream" uid="uid://7lndmvl80sun" path="res://assets/voices/phonemes/e.mp3" id="12_sn1q1"]
[ext_resource type="AudioStream" uid="uid://c5paxb8ngcmqm" path="res://assets/voices/05/mover_abajo.mp3" id="13_akqns"]
[ext_resource type="PackedScene" uid="uid://bhlbt7mk6goj4" path="res://components/footer.tscn" id="14_ocblk"]
[ext_resource type="Texture2D" uid="uid://bbwok74hcj4xv" path="res://assets/icons/arrow.png" id="17_ojxsj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cr241"]
size = Vector2(43.75, 531.25)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_acq3x"]
bg_color = Color(0.933333, 0.933333, 0.933333, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Animation" id="Animation_qmns2"]
resource_name = "intro"
length = 10.0
tracks/0/type = "animation"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionComponent")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": PackedStringArray("fade_out"),
"times": PackedFloat32Array(0)
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Narrator")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_w5ht4")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_hinqq")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("10_80bu8")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("11_8bkos")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_hinqq")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("12_sn1q1")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("13_akqns")
}],
"times": PackedFloat32Array(0.4, 3.5, 4.3, 5, 6.9, 7.7, 8.4)
}
tracks/1/use_blend = true
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(10),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_race"
}]
}

[sub_resource type="Animation" id="Animation_cr6sp"]
resource_name = "outro"
length = 0.3
tracks/0/type = "animation"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionComponent")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": PackedStringArray("fade_in"),
"times": PackedFloat32Array(0)
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Footer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hidden_button"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hso1o"]
_data = {
"intro": SubResource("Animation_qmns2"),
"outro": SubResource("Animation_cr6sp")
}

[node name="Race" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_impug")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContainerCenter" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -640.0
offset_right = 360.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpeedWay" parent="ContainerCenter" instance=ExtResource("1_62cbq")]
position = Vector2(287, 640)
scale = Vector2(0.8, 0.8)

[node name="Goal2" type="Control" parent="ContainerCenter/SpeedWay"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1787.5
offset_top = -261.25
offset_right = 1787.5
offset_bottom = -261.25
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(360, 640)

[node name="Flag" type="TextureRect" parent="ContainerCenter/SpeedWay/Goal2"]
layout_mode = 0
offset_left = 491.0
offset_top = -88.0
offset_right = 511.0
offset_bottom = 262.0
scale = Vector2(2.055, 2.055)
texture = ExtResource("3_ysl2e")
stretch_mode = 1

[node name="Area2D" type="Area2D" parent="ContainerCenter/SpeedWay/Goal2"]
position = Vector2(405, 388)
monitoring = false
priority = 1
linear_damp = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContainerCenter/SpeedWay/Goal2/Area2D"]
position = Vector2(149.375, -124.875)
shape = SubResource("RectangleShape2D_cr241")

[node name="BoxSpawner" type="Node2D" parent="ContainerCenter"]
position = Vector2(288, 640)

[node name="Container" type="Node2D" parent="ContainerCenter/BoxSpawner"]

[node name="BoxSpawn" type="Node2D" parent="ContainerCenter/BoxSpawner"]
position = Vector2(485, -132)
scale = Vector2(0.272, 0.272)

[node name="BoxSpawn2" type="Node2D" parent="ContainerCenter/BoxSpawner"]
position = Vector2(485, 2)
scale = Vector2(0.272, 0.272)

[node name="BoxSpawn3" type="Node2D" parent="ContainerCenter/BoxSpawner"]
position = Vector2(485, 132)
scale = Vector2(0.272, 0.272)

[node name="Timer" type="Timer" parent="ContainerCenter/BoxSpawner"]
wait_time = 5.0

[node name="ConfettiEffect" parent="ContainerCenter" instance=ExtResource("4_nub6g")]
position = Vector2(287, 639)
scale = Vector2(0.8, 0.8)

[node name="Car" parent="ContainerCenter" instance=ExtResource("2_wetop")]
position = Vector2(141, 613)

[node name="Spawn" type="Node2D" parent="ContainerCenter"]
position = Vector2(141, 469)

[node name="Spawn2" type="Node2D" parent="ContainerCenter"]
position = Vector2(141, 613)

[node name="Spawn3" type="Node2D" parent="ContainerCenter"]
position = Vector2(141, 742)

[node name="Phoneme" type="Panel" parent="ContainerCenter"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -527.0
offset_right = 97.0
offset_bottom = -333.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(97, 97)
theme_override_styles/panel = SubResource("StyleBoxFlat_acq3x")

[node name="Arrow" type="Sprite2D" parent="ContainerCenter/Phoneme"]
modulate = Color(0.133333, 0.133333, 0.133333, 1)
position = Vector2(-85.5002, 94.5)
rotation = 1.5708
scale = Vector2(1.5, 1.5)
texture = ExtResource("17_ojxsj")

[node name="Arrow2" type="Sprite2D" parent="ContainerCenter/Phoneme"]
modulate = Color(0.133333, 0.133333, 0.133333, 1)
position = Vector2(254.5, 94.5001)
rotation = 1.5708
scale = Vector2(1.5, 1.5)
texture = ExtResource("17_ojxsj")

[node name="Letter" type="Label" parent="ContainerCenter/Phoneme"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.75
offset_top = -116.25
offset_right = 120.25
offset_bottom = 194.75
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("6_0nrhg")
theme_override_font_sizes/font_size = 180
text = "i"

[node name="Phoneme2" type="Panel" parent="ContainerCenter"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = 309.0
offset_right = 97.0
offset_bottom = 503.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(97, 97)
theme_override_styles/panel = SubResource("StyleBoxFlat_acq3x")

[node name="Arrow" type="Sprite2D" parent="ContainerCenter/Phoneme2"]
modulate = Color(0.133333, 0.133333, 0.133333, 1)
position = Vector2(-85.5002, 94.5)
rotation = 1.5708
scale = Vector2(1.5, 1.5)
texture = ExtResource("17_ojxsj")
flip_h = true

[node name="Arrow2" type="Sprite2D" parent="ContainerCenter/Phoneme2"]
modulate = Color(0.133333, 0.133333, 0.133333, 1)
position = Vector2(254.5, 94.5001)
rotation = 1.5708
scale = Vector2(1.5, 1.5)
texture = ExtResource("17_ojxsj")
flip_h = true

[node name="Letter" type="Label" parent="ContainerCenter/Phoneme2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -138.75
offset_right = 94.0
offset_bottom = 172.25
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("6_0nrhg")
theme_override_font_sizes/font_size = 180
text = "e"

[node name="Footer" parent="." instance=ExtResource("14_ocblk")]
layout_mode = 1

[node name="FrameCounter" parent="." instance=ExtResource("5_t7p62")]
layout_mode = 0
offset_left = 36.0
offset_top = 340.0
offset_right = 127.0
offset_bottom = 393.0
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)

[node name="PredictionComponent" type="HTTPRequest" parent="."]
accept_gzip = false
script = ExtResource("6_lvfr2")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8

[node name="Narrator" type="AudioStreamPlayer" parent="."]
volume_db = 5.0
bus = &"Narrator"

[node name="TransitionComponent" parent="." instance=ExtResource("7_tvmg0")]

[node name="TaskAnimator" type="AnimationPlayer" parent="."]
autoplay = "intro"
libraries = {
"": SubResource("AnimationLibrary_hso1o")
}

[connection signal="timeout" from="ContainerCenter/BoxSpawner/Timer" to="." method="_on_timer_box_timeout"]
[connection signal="crashed" from="ContainerCenter/Car" to="." method="_on_car_crashed"]
[connection signal="won" from="ContainerCenter/Car" to="." method="_on_car_won"]
[connection signal="pressed" from="Footer" to="." method="_on_footer_pressed"]
[connection signal="request_completed" from="PredictionComponent" to="." method="_on_prediction_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
